--- a/Diabetes_WIP_Final.ipynb
+++ b/Diabetes_WIP_Final.ipynb
@@ -84,17 +84,7 @@
    "cell_type": "markdown",
    "id": "0c68489f-ec27-463a-8a94-d3e437ac4868",
    "metadata": {},
-   "source": [
-    "# 9. Model Deployment and testing with Unseen Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4bc8b3f-1393-4fe6-9bfa-1467281da80c",
-   "metadata": {},
-   "source": [
-    "# 10. Conclusion"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -122,6 +112,7 @@
     "# Data Manipulation and Visualization\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from math import pi\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -347,7 +338,7 @@
    "id": "11272ace-dae9-4f3e-a19c-6033b6339f1f",
    "metadata": {},
    "source": [
-    "## 4.1 Descriptive Statistics: Calculate summary statistics for numerical features"
+    "## 4.1 Descriptive Statistics: Summary Statistics for Numerical Features"
    ]
   },
   {
@@ -551,7 +542,7 @@
    "id": "f8f95575-ef49-42b1-85ff-e8eb780c986e",
    "metadata": {},
    "source": [
-    "## 5.1 Removing Unnecessary Features"
+    "## 5.1 Removing Features with Low Correlation with Diabetes"
    ]
   },
   {
@@ -1172,11 +1163,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bedb57b-0b62-4e2f-99a1-aa52f66c9bed",
+   "cell_type": "markdown",
+   "id": "77d04919-f31c-4b6c-9d81-ce037ee5db6b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 6.7.1 Defining the Hyperparamter Space and Optimizing the Neural Network"
    ]
@@ -1323,13 +1312,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "535c9858-cf1b-48d3-ad14-e7510aed5a72",
+   "cell_type": "markdown",
+   "id": "76bfac89-4c28-4fa4-836c-538c5231c410",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### 6.7.3 Printing the best Trial"
+    "### 6.7.2 Printing the best Trial"
    ]
   },
   {
@@ -1360,21 +1347,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55567365-09f4-47bd-9145-46d4ea7349ac",
+   "cell_type": "markdown",
+   "id": "0a12b0cf-90f5-433a-bb4c-fe82984373aa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### 6.7.4 Visualizing Optuna Study Results"
+    "### 6.7.3 Visualizing Optuna Study Results"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ae49f39d-5670-42a9-a424-e84b2ad54020",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70984568-01a9-4485-b0f1-a692270f9022",
    "metadata": {
     "id": "1g1XOeJsNKbg"
    },
+   "outputs": [],
    "source": [
     "# Plot optimization history\n",
     "optuna.visualization.plot_optimization_history(study).show()\n",
@@ -1417,7 +1404,7 @@
     "id": "z0_eug3DMUVA"
    },
    "source": [
-    "### 6.7.5 Training with the best Hyperparamters"
+    "### 6.7.4 Training with the best Hyperparamters"
    ]
   },
   {
@@ -1760,13 +1747,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fec57b8-9ba2-42a5-9b0a-f59460864b51",
+   "cell_type": "markdown",
+   "id": "479454a5-4375-469a-af03-13b476c65fac",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## 7.1 Precision & Recall"
+    "## 7.3 Precision & Recall"
    ]
   },
   {
@@ -1799,7 +1784,25 @@
    "cell_type": "markdown",
    "id": "b84f88aa-21e7-445d-936d-ee3cfaeb333d",
    "metadata": {},
-   "source": []
+   "source": [
+    "- **Precision:** Measures how many of the predicted positive instances are actually positive. High precision indicates a low false positive rate.\n",
+    "- **Recall:** Measures how many of the actual positive instances are correctly identified by the model. High recall indicates a low false negative rate.\n",
+    "\n",
+    "**Brief Summary of Results:**\n",
+    "\n",
+    "- **Class 0:** All models exhibit high precision and recall, indicating they are effective at identifying and correctly predicting the majority class.\n",
+    "- **Class 1:** Precision and recall vary significantly across models. **CatBoost** and **XGB** show a strong balance between precision and recall, making them reliable for handling the minority class. **RandomForest** also performs well, while **LogisticRegression** and **GaussianNB** show higher recall but lower precision, indicating a higher rate of false positives. **Neural Network** and **KNN** have moderate performance, suggesting room for improvement.\n",
+    "\n",
+    "Overall, models like **CatBoost**, **XGB**, and **RandomForest** that maintain a good balance between precision and recall are preferable for effectively handling class imbalance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "074321a1-6f91-450e-b2ca-9ead47373c33",
+   "metadata": {},
+   "source": [
+    "## 7.4 Radar Chart for Overall Performance"
+   ]
   },
   {
    "cell_type": "code",
@@ -1808,11 +1811,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Radar Chart for Overall Performance\n",
-    "import numpy as np\n",
-    "from math import pi\n",
-    "\n",
     "# Data preparation for radar chart\n",
     "def get_radar_data(model_results, metrics):\n",
     "    data = []\n",
@@ -1846,6 +1844,28 @@
     "plt.legend(loc='upper right', bbox_to_anchor=(1.1, 1.1))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc82c594-56cd-4584-b107-d18bcca4e9a5",
+   "metadata": {},
+   "source": [
+    "![Radar chart](https://i.imgur.com/yEHRslO.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc5de484-20b6-48dd-bfcd-259548a20d4f",
+   "metadata": {},
+   "source": [
+    "# 8. Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dbdd6cb-d1b1-4201-82fe-dc02c0580316",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
