--- a/Diabetes_WIP_Final.ipynb
+++ b/Diabetes_WIP_Final.ipynb
@@ -32,6 +32,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5660981-8273-4ba4-a539-734e7fbc157f",
+   "metadata": {},
+   "source": [
+    "The goal of this project is to develop and evaluate various machine learning models to predict diabetes based on a set of medical and demographic features. By leveraging different classifiers and optimizing their hyperparameters, we aim to identify the most effective model for accurate and reliable diabetes prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "50738bec-dba3-4ff7-b768-171a6702126c",
    "metadata": {
     "id": "88d011b8-dee1-4543-a21d-0aa1fbd30577"
@@ -42,12 +50,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b507ec35-5df4-469c-85dd-dc457259dcb9",
+   "metadata": {},
+   "source": [
+    "Diabetes is a chronic disease that affects millions of people worldwide. Early detection and management are crucial to prevent severe complications. The problem at hand is to build a predictive model that can accurately classify individuals as diabetic or non-diabetic based on their medical and demographic data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ee75c3b2-0462-4003-973b-1091558d99d5",
    "metadata": {
     "id": "88d011b8-dee1-4543-a21d-0aa1fbd30577"
    },
    "source": [
     "## 1.3 Impact of the Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec15551d-3d3a-4139-8eee-e3909692c1e8",
+   "metadata": {},
+   "source": [
+    "An accurate predictive model for diabetes can significantly impact public health by enabling early diagnosis and intervention. This can lead to better management of the disease, reduced healthcare costs, and improved quality of life for individuals at risk. Additionally, such a model can assist healthcare professionals in making informed decisions and tailoring personalized treatment plans."
    ]
   },
   {
@@ -67,24 +91,50 @@
     "id": "88d011b8-dee1-4543-a21d-0aa1fbd30577"
    },
    "source": [
-    "## 2.1 Source of Data\n"
+    "## 2.1 Source of Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6b6852ad-d3fb-44eb-b3f7-1b07ac12ed4a",
-   "metadata": {
-    "id": "88d011b8-dee1-4543-a21d-0aa1fbd30577"
-   },
-   "source": [
-    "## 2.2 Composition of the Dataset\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c68489f-ec27-463a-8a94-d3e437ac4868",
+   "id": "ee04ac2c-c209-4825-b174-e6b70c5edd72",
    "metadata": {},
-   "source": []
+   "source": [
+    "The dataset is sourced from Priyam Choksi on Kaggle - Comprehensive Diabetes Clinical Dataset(100k rows), which can be found at the following URL: https://www.kaggle.com/datasets/priyamchoksi/100000-diabetes-clinical-dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1723eab1-c1e8-48d5-b884-3f3a0eb2be77",
+   "metadata": {},
+   "source": [
+    "## 2.2 Composition of the Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5556a059-9b59-43f0-9397-daa76b63f0ec",
+   "metadata": {},
+   "source": [
+    "The dataset contains health-related information about individuals:\n",
+    "\n",
+    "1. **Year**: The year when the data was recorded (2015, 2016, 2018, 2019, 2020, 2021, 2022).\n",
+    "2. **Gender**: The gender of the individuals (Male, Female).\n",
+    "3. **Age**: An integer of the age of the individuals.\n",
+    "4. **Location**: The location where the individuals reside (e.g., Alabama).\n",
+    "5. **Race**: The race of the individuals, represented by multiple binary columns indicating the presence (1) or absence (0) of specific races:\n",
+    "   - **Race: African American**\n",
+    "   - **Race: Asian**\n",
+    "   - **Race: Caucasian**\n",
+    "   - **Race: Hispanic**\n",
+    "   - **Race: Other**\n",
+    "6. **Hypertension**: A binary column indicating whether the individual has hypertension (1) or not (0).\n",
+    "7. **Heart Disease**: A binary column indicating whether the individual has heart disease (1) or not (0).\n",
+    "8. **Smoking History**: The smoking history of the individuals (former, current, ever, not current, never, no info).\n",
+    "9. **BMI**: A float value of the Body Mass Index of the individuals.\n",
+    "10. **HbA1c Level**: A float value of the HbA1c level, which is a measure of blood sugar levels over the past three months.\n",
+    "11. **Blood Glucose Level**: An integer value of the blood glucose level of the individuals.\n",
+    "12. **Diabetes**: A binary column indicating whether the individual has diabetes (1) or not (0)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -769,11 +819,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "collapsed": true,
     "id": "4814b926-5310-4206-9944-f22e8dce366d",
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "outputId": "3e80704a-4721-437d-e507-00533f3efbd8",
     "scrolled": true
    },
@@ -1064,30 +1110,23 @@
     }
    ],
    "source": [
-    "# Define the CatBoostClassifier\n",
     "catboost = CatBoostClassifier(verbose=0)\n",
     "\n",
-    "# Define the parameter grid\n",
     "catboost_param_grid = {\n",
     "    'iterations': [100, 200],\n",
     "    'depth': [4, 6],\n",
     "    'learning_rate': [0.01, 0.1]\n",
     "}\n",
     "\n",
-    "# Create the GridSearchCV object\n",
     "grid_search = GridSearchCV(estimator=catboost, param_grid=catboost_param_grid, cv=5, n_jobs=-1, scoring='f1')\n",
     "\n",
-    "# Fit the model\n",
     "grid_search.fit(X_train_cleaned, y_train_smote)\n",
     "\n",
-    "# Get the best estimator\n",
     "best_catboost = grid_search.best_estimator_\n",
     "\n",
-    "# Evaluate the model\n",
     "y_pred = best_catboost.predict(X_test_cleaned)\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# Optionally, print the best parameters and best score\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print(\"Best cross-validation score: \", grid_search.best_score_)"
    ]
@@ -1342,8 +1381,7 @@
     "print(f\"  Value: {best_trial.value}\")\n",
     "print(\"  Params: \")\n",
     "for key, value in best_trial.params.items():\n",
-    "    print(f\"    {key}: {value}\")\n",
-    "\n"
+    "    print(f\"    {key}: {value}\")"
    ]
   },
   {
