--- a/Diabetes_prediction.ipynb
+++ b/Diabetes_prediction.ipynb
@@ -1903,7 +1903,10 @@
    "cell_type": "markdown",
    "id": "5dbdd6cb-d1b1-4201-82fe-dc02c0580316",
    "metadata": {},
-   "source": []
+   "source": [
+    "In this project, we developed and evaluated several machine learning models to predict diabetes using a dataset with significant class imbalance. Through comprehensive data preprocessing including handling missing values, encoding categorical variables, standardizing numerical features, and addressing class imbalance with **SMOTE**, we ensured the dataset was well-prepared for modeling. We explored a variety of classifiers, including Logistic Regression, K-Nearest Neighbors, RandomForest, XGBoost, CatBoost, Gaussian Naive Bayes, and a custom Neural Network. Our evaluation metrics—accuracy, precision, recall, and F1-score—revealed that **XGBoost** and **CatBoost** consistently outperformed other models, demonstrating high accuracy and balanced performance across both classes. **RandomForest** also showed strong results, while **Logistic Regression** and **Gaussian Naive Bayes** struggled with the class imbalance. The neural network, optimized using **Optuna**, performed well but did not surpass the tree-based models. Overall, the project highlights the importance of addressing class imbalance. Further considerations include selecting a different strategy for handling class imbalance, for instance, hybrid sampling (e.g. SMOTEENN), class weighting or ensemble methods.\n",
+    "> **\"In the realm of predictive healthcare, choosing the right model can be the difference between life and death.\"**"
+   ]
   }
  ],
  "metadata": {
