--- a/Diabetes_prediction.ipynb
+++ b/Diabetes_prediction.ipynb
@@ -309,7 +309,7 @@
    "id": "07bac18b-6665-4f1a-bbca-279af877aacc",
    "metadata": {},
    "source": [
-    "## 3.3 Standardizating Numerical Variables"
+    "## 3.3 Standardizing Numerical Variables"
    ]
   },
   {
